Made less templated

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300..700&display=swap');
       </style>
+      <script src="https://kit.fontawesome.com/1b016f3088.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
